依赖管理模块

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ buildNumber.properties
 
 # User-specific stuff
 .idea/**
+*.iml
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
@@ -158,4 +159,3 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
