--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,10 @@
     </parent>
 
     <properties>
-        <java.version>1.8</java.version>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <project.compile.sourceEncoding>UTF-8</project.compile.sourceEncoding>
-        <maven.compile.source>1.8</maven.compile.source>
-        <maven.compile.target>1.8</maven.compile.target>
+        <maven.compile.source>${java.version}</maven.compile.source>
+        <maven.compile.target>${java.version}</maven.compile.target>
     </properties>
 
     <repositories>
