--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,9 @@
     <modules>
         <module>cloud-layer-dependencies</module>
         <module>cloud-layer-starters</module>
-        <module>cloud-layer-common</module>
+        <module>cloud-layer-core</module>
         <module>cloud-layer-server</module>
+        <module>cloud-layer-demo</module>
     </modules>
 
 
