--- a/cloud-layer-demo/pom.xml
+++ b/cloud-layer-demo/pom.xml
@@ -7,9 +7,11 @@
         <groupId>com.ossdisk</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-layer-common</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <artifactId>cloud-layer-demo</artifactId>
+    <description>用例</description>
 
 
 </project>
