--- a/cloud-layer-core/cloud-layer-utils/pom.xml
+++ b/cloud-layer-core/cloud-layer-utils/pom.xml
@@ -3,16 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>cloud-layer-dependencies</artifactId>
+        <artifactId>cloud-layer-core</artifactId>
         <groupId>com.ossdisk</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../cloud-layer-dependencies</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>cloud-layer-server</artifactId>
-    <description>日志等服务</description>
-
+    <packaging>jar</packaging>
+    <artifactId>cloud-layer-utils</artifactId>
+    <description>utils</description>
 
 </project>
