--- a/cloud-layer-dependencies/pom.xml
+++ b/cloud-layer-dependencies/pom.xml
@@ -17,11 +17,15 @@
     <properties>
         <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
         <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+        <lombok.version>1.18.6</lombok.version>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <netty-all.version>4.1.33.Final</netty-all.version>
     </properties>
 
 
     <dependencyManagement>
         <dependencies>
+            <!--spring start-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -34,6 +38,25 @@
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+            <!--spring end-->
+            <!--other-start-->
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty-all.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+            <!--other-end-->
         </dependencies>
     </dependencyManagement>
 
