--- a/cloud-layer-demo/pom.xml
+++ b/cloud-layer-demo/pom.xml
@@ -12,7 +12,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>cloud-layer-demo</artifactId>
-    <description>用例</description>
+    <description>演示项目</description>
 
 
 </project>
