--- a/cloud-layer-server/pom.xml
+++ b/cloud-layer-server/pom.xml
@@ -11,6 +11,9 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+    <modules>
+        <module>cloud-layer-test-server</module>
+    </modules>
     <artifactId>cloud-layer-server</artifactId>
     <description>日志等服务</description>
 
