--- a/cloud-layer-starters/base-spring-boot-starters/web-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/base-spring-boot-starters/web-spring-boot-starter/pom.xml
@@ -2,16 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
-        <artifactId>cloud-layer-dependencies</artifactId>
+        <artifactId>base-spring-boot-starters</artifactId>
         <groupId>com.ossdisk</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <artifactId>web-spring-boot-starter</artifactId>
-    <description>创建 Web 工程的基础依赖，为了统一容器等</description>
+    <description>web 基础依赖,统一容器，同一版本</description>
 
     <dependencies>
         <dependency>
