--- a/cloud-layer-starters/core-spring-boot-starters/pom.xml
+++ b/cloud-layer-starters/core-spring-boot-starters/pom.xml
@@ -2,22 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
-        <artifactId>cloud-layer-dependencies</artifactId>
+        <artifactId>cloud-layer-starters</artifactId>
         <groupId>com.ossdisk</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../cloud-layer-dependencies</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <artifactId>cloud-layer-starters</artifactId>
-    <description>自定义starters</description>
+    <artifactId>core-spring-boot-starters</artifactId>
+    <description>具备独立支撑某想功能的模块</description>
 
     <modules>
-        <module>base-spring-boot-starters</module>
-        <module>config-spring-boot-starters</module>
-        <module>core-spring-boot-starters</module>
+        <module>netty-spring-boot-starter</module>
+        <module>doc-spring-boot-starter</module>
     </modules>
 
 
