--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>cloud-layer</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <description>cloud-layer</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -16,12 +15,54 @@
         <version>2.1.3.RELEASE</version>
     </parent>
 
+    <name>cloud-layer</name>
+    <url>https://github.com/crazyweeds/cloud-layer</url>
+    <inceptionYear>2019</inceptionYear>
+    <description>
+        1.基于 Spring Cloud的微服务快速开发基础项目，本项目的终极目标是能够贯穿项目的整个开发周期，从基础开发的增删改查，到项目的运维、监控、日志、文档生成；
+        2.既然是 cloud-layer 那自然是无比灵活，但轻盈无比；
+    </description>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>RippleChan</name>
+            <email>ripplechan.work@gmail.com</email>
+            <roles>
+                <role>Owner</role>
+            </roles>
+            <timezone>+8</timezone>
+            <url>https://github.com/crazyweeds/</url>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:https://github.com/crazyweeds/cloud-layer.git</connection>
+        <developerConnection>scm:git:https://github.com/crazyweeds/cloud-layer.git</developerConnection>
+        <url>https://github.com/crazyweeds/cloud-layer</url>
+        <tag>${project.version}</tag>
+    </scm>
+
     <properties>
         <java.version>11</java.version>
         <project.compile.sourceEncoding>UTF-8</project.compile.sourceEncoding>
         <maven.compile.source>${java.version}</maven.compile.source>
         <maven.compile.target>${java.version}</maven.compile.target>
     </properties>
+
+    <modules>
+        <module>cloud-layer-dependencies</module>
+        <module>cloud-layer-starters</module>
+        <module>cloud-layer-core</module>
+        <module>cloud-layer-server</module>
+        <module>cloud-layer-demo</module>
+    </modules>
 
     <repositories>
         <repository>
@@ -45,14 +86,6 @@
             </releases>
         </pluginRepository>
     </pluginRepositories>
-
-    <modules>
-        <module>cloud-layer-dependencies</module>
-        <module>cloud-layer-starters</module>
-        <module>cloud-layer-core</module>
-        <module>cloud-layer-server</module>
-        <module>cloud-layer-demo</module>
-    </modules>
 
 
 </project>
