--- a/cloud-layer-core/cloud-layer-bean/pom.xml
+++ b/cloud-layer-core/cloud-layer-bean/pom.xml
@@ -4,20 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>core-spring-boot-starters</artifactId>
+        <artifactId>cloud-layer-core</artifactId>
         <groupId>com.ossdisk</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>netty-core-spring-boot-starter</module>
-        <module>netty-server-spring-boot-starter</module>
-        <module>netty-mc-spring-boot-starter</module>
-    </modules>
-    <artifactId>netty-spring-boot-starter</artifactId>
-    <description>netty相关的</description>
-
+    <packaging>jar</packaging>
+    <artifactId>cloud-layer-bean</artifactId>
+    <description>公用 bean </description>
 
 </project>
