--- a/cloud-layer-starters/core-spring-boot-starters/netty-spring-boot-starter/netty-server-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/core-spring-boot-starters/netty-spring-boot-starter/netty-server-spring-boot-starter/pom.xml
@@ -7,9 +7,11 @@
         <groupId>com.ossdisk</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
     <artifactId>netty-server-spring-boot-starter</artifactId>
+    <description>netty 服务器</description>
 
 
 </project>
