--- a/cloud-layer-starters/core-spring-boot-starters/security-spring-boot-starters/pom.xml
+++ b/cloud-layer-starters/core-spring-boot-starters/security-spring-boot-starters/pom.xml
@@ -4,22 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>cloud-layer-starters</artifactId>
+        <artifactId>core-spring-boot-starters</artifactId>
         <groupId>com.ossdisk</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <artifactId>core-spring-boot-starters</artifactId>
-    <description>具备独立支撑某想功能的模块</description>
-
-    <modules>
-        <module>netty-spring-boot-starter</module>
-        <module>doc-spring-boot-starter</module>
-        <module>logger-spring-boot-starter</module>
-        <module>security-spring-boot-starters</module>
-    </modules>
+    <artifactId>security-spring-boot-starters</artifactId>
+    <description>安全模块</description>
 
 
 </project>
