增加缓存模块

--- a/cloud-layer-starters/core-spring-boot-starters/pom.xml
+++ b/cloud-layer-starters/core-spring-boot-starters/pom.xml
@@ -19,6 +19,7 @@
         <module>doc-spring-boot-starter</module>
         <module>logger-spring-boot-starter</module>
         <module>security-spring-boot-starters</module>
+        <module>cache-spring-boot-starter</module>
     </modules>
 
 
