修改项目信息

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
             <name>RippleChan</name>
             <email>ripplechan.work@gmail.com</email>
             <roles>
-                <role>Owner</role>
+                <role>developer</role>
             </roles>
             <timezone>+8</timezone>
             <url>https://github.com/crazyweeds/</url>
