--- a/cloud-layer-core/cloud-layer-bean/pom.xml
+++ b/cloud-layer-core/cloud-layer-bean/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <artifactId>cloud-layer-core</artifactId>
-        <groupId>com.ossdisk</groupId>
+        <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
