--- a/cloud-layer-server/pom.xml
+++ b/cloud-layer-server/pom.xml
@@ -4,16 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>cloud-layer-dependencies</artifactId>
-        <groupId>com.ossdisk</groupId>
+        <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../cloud-layer-dependencies</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <modules>
-        <module>cloud-layer-test-server</module>
-    </modules>
     <artifactId>cloud-layer-server</artifactId>
     <description>日志等服务</description>
 
