--- a/cloud-layer-starters/base-spring-boot-starters/pom.xml
+++ b/cloud-layer-starters/base-spring-boot-starters/pom.xml
@@ -2,15 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <artifactId>cloud-layer-starters</artifactId>
-        <groupId>com.ossdisk</groupId>
+        <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>base-spring-boot-starters</artifactId>
     <packaging>pom</packaging>
+
     <modules>
         <module>web-spring-boot-starter</module>
     </modules>
