--- a/cloud-layer-starters/core-spring-boot-starters/netty-spring-boot-starter/netty-server-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/core-spring-boot-starters/netty-spring-boot-starter/netty-server-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>netty-spring-boot-starter</artifactId>
-        <groupId>com.ossdisk</groupId>
+        <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
