--- a/cloud-layer-starters/core-spring-boot-starters/security-spring-boot-starters/pom.xml
+++ b/cloud-layer-starters/core-spring-boot-starters/security-spring-boot-starters/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <artifactId>core-spring-boot-starters</artifactId>
-        <groupId>com.ossdisk</groupId>
+        <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
