--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ossdisk</groupId>
+    <groupId>io.cloud.layer</groupId>
     <artifactId>cloud-layer</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -16,7 +16,7 @@
     </parent>
 
     <name>cloud-layer</name>
-    <url>https://github.com/crazyweeds/cloud-layer</url>
+    <url>http://www.cloud-layer.io</url>
     <inceptionYear>2019</inceptionYear>
     <description>
         1.基于 Spring Cloud的微服务快速开发基础项目，本项目的终极目标是能够贯穿项目的整个开发周期，从基础开发的增删改查，到项目的运维、监控、日志、文档生成；
@@ -45,7 +45,7 @@
     <scm>
         <connection>scm:git:https://github.com/crazyweeds/cloud-layer.git</connection>
         <developerConnection>scm:git:https://github.com/crazyweeds/cloud-layer.git</developerConnection>
-        <url>https://github.com/crazyweeds/cloud-layer</url>
+        <url>http://www.cloud-layer.io</url>
         <tag>${project.version}</tag>
     </scm>
 
