--- a/cloud-layer-tests/pom.xml
+++ b/cloud-layer-tests/pom.xml
@@ -2,21 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
-        <artifactId>cloud-layer-starters</artifactId>
         <groupId>io.cloud.layer</groupId>
+        <artifactId>cloud-layer-dependencies</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../cloud-layer-dependencies</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>base-spring-boot-starters</artifactId>
     <packaging>pom</packaging>
-
-    <modules>
-        <module>web-spring-boot-starter</module>
-        <module>log-spring-boot-starters</module>
-    </modules>
+    <artifactId>cloud-layer-tests</artifactId>
+    <description>测试项目</description>
 
 
 </project>
