--- a/cloud-layer-starters/config-spring-boot-starters/kafka-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/config-spring-boot-starters/kafka-spring-boot-starter/pom.xml
@@ -3,21 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>cloud-layer-starters</artifactId>
+        <artifactId>config-spring-boot-starters</artifactId>
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>config-spring-boot-starters</artifactId>
-    <packaging>pom</packaging>
-    <description>配置相关</description>
-
-    <modules>
-        <module>swagger-spring-boot-starter</module>
-        <module>kafka-spring-boot-starter</module>
-        <module>mybatis-spring-boot-starters</module>
-    </modules>
+    <packaging>jar</packaging>
+    <artifactId>kafka-spring-boot-starter</artifactId>
+    <description>kafka相关</description>
 
 
 </project>
