--- a/cloud-layer-core/pom.xml
+++ b/cloud-layer-core/pom.xml
@@ -19,5 +19,12 @@
         <module>cloud-layer-bean</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
