Spring Security 安全模块

--- a/cloud-layer-starters/config-spring-boot-starters/pom.xml
+++ b/cloud-layer-starters/config-spring-boot-starters/pom.xml
@@ -18,6 +18,8 @@
         <module>kafka-spring-boot-starter</module>
         <module>mybatis-spring-boot-starters</module>
         <module>mail-spring-boot-starter</module>
+        <module>security-spring-boot-starter</module>
+        <module>shiro-spring-boot-starter</module>
     </modules>
 
 
