--- a/cloud-layer-starters/config-spring-boot-starters/shiro-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/config-spring-boot-starters/shiro-spring-boot-starter/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
-        <artifactId>core-spring-boot-starters</artifactId>
+        <artifactId>config-spring-boot-starters</artifactId>
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>security-spring-boot-starters</artifactId>
-    <description>安全模块</description>
+    <packaging>jar</packaging>
+    <artifactId>shiro-spring-boot-starter</artifactId>
+    <description>基于 Shiro 的安全认证</description>
 
 
 </project>
