--- a/cloud-layer-starters/pom.xml
+++ b/cloud-layer-starters/pom.xml
@@ -20,7 +20,13 @@
         <module>core-spring-boot-starters</module>
     </modules>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 
 
 </project>
