--- a/.editorconfig
+++ b/.editorconfig
@@ -6,5 +6,9 @@ insert_final_newline = true
 charset = utf-8
 
 [*.java]
+indent_size = 4
+end_of_line = lf
+insert_final_newline = true
+charset = utf-8
 indent_style = space
 indent_size = 4
