--- a/cloud-layer-starters/base-spring-boot-starters/shell-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/base-spring-boot-starters/shell-spring-boot-starter/pom.xml
@@ -4,20 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>cloud-layer-starters</artifactId>
+        <artifactId>base-spring-boot-starters</artifactId>
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>base-spring-boot-starters</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
+    <artifactId>shell-spring-boot-starter</artifactId>
 
-    <modules>
-        <module>web-spring-boot-starter</module>
-        <module>log-spring-boot-starters</module>
-        <module>shell-spring-boot-starter</module>
-    </modules>
+    
 
 
 </project>
