--- a/cloud-layer-tests/cloud-layer-security-test/src/main/resources/application.properties
+++ b/cloud-layer-tests/cloud-layer-security-test/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.application.name=SpringSecurityTest
 
-spring.security.loginPath=/login
-spring.security.login-type=basic
+logging.level.root=debug
