--- a/cloud-layer-tests/cloud-layer-swagger-test/pom.xml
+++ b/cloud-layer-tests/cloud-layer-swagger-test/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>swagger-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
