--- a/cloud-layer-server/zuul-gateway-server/pom.xml
+++ b/cloud-layer-server/zuul-gateway-server/pom.xml
@@ -3,20 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>cloud-layer-dependencies</artifactId>
+        <artifactId>cloud-layer-server</artifactId>
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../cloud-layer-dependencies</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>cloud-layer-server</artifactId>
-    <description>日志等服务</description>
+    <packaging>jar</packaging>
+    <artifactId>zuul-gateway-server</artifactId>
 
-    <modules>
-        <module>zuul-gateway-server</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
