--- a/cloud-layer-server/pom.xml
+++ b/cloud-layer-server/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>zuul-gateway-server</module>
+        <module>eureka-register-server</module>
     </modules>
 
 
