--- a/cloud-layer-server/zuul-gateway/pom.xml
+++ b/cloud-layer-server/zuul-gateway/pom.xml
@@ -10,13 +10,12 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <artifactId>eureka-register-server</artifactId>
-    <description>注册中心</description>
+    <artifactId>zuul-gateway</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
         <dependency>
             <groupId>io.cloud.layer</groupId>
