--- a/cloud-layer-server/eureka-server/src/main/resources/bootstrap.properties
+++ b/cloud-layer-server/eureka-server/src/main/resources/bootstrap.properties
@@ -6,3 +6,11 @@ eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
 eureka.server.wait-time-in-ms-when-sync-empty=0
 eureka.server.enable-self-preservation=false
+
+
+#Eureka提供了不少现成的endpoint，用于查询各种信息。比如这样的：http://127.0.0.1:8761/eureka/status
+#详情参照：https://github.com/Netflix/eureka/wiki/Eureka-REST-operations
+#根据去发现，是在这个包下面实现的：com.netflix.eureka.resources，根据JSR311规范，实现的接口。
+#有了这些东西，自然能够溯源到数据的真实来源，可以根据需求做一些定制化开发。比如：当特定服务不在线的时候，发送邮件或者拨打电话等等。
+
+#官方文档：https://cloud.spring.io/spring-cloud-netflix/multi/multi_spring-cloud-eureka-server.html#spring-cloud-eureka-server-zones-and-regions
