--- a/cloud-layer-server/zuul-gateway/src/main/resources/bootstrap.properties
+++ b/cloud-layer-server/zuul-gateway/src/main/resources/bootstrap.properties
@@ -2,4 +2,5 @@ spring.application.name=zuul-server
 server.port=8080
 
 zuul.routes.client-a.path=/client/**
-zuul.routes.client-a.url=http://127.0.0.1
+zuul.routes.client-a.url=http://127.0.0.1:8761
+#zuul.routes.client-c.service-id=
