--- a/cloud-layer-server/eureka-client/src/main/resources/bootstrap.properties
+++ b/cloud-layer-server/eureka-client/src/main/resources/bootstrap.properties
@@ -1,11 +1,10 @@
 spring.application.name=eureka-client
-server.port=8080
+server.port=${random.int(10000,60000)}
 
 #这里的书写规则为什么有点奇葩？这需要了解SpringBoot解析配置文件的逻辑。当然，如果你不想了解其中的细节，那么一下可能让你大致理解为什么会这么写：
 #org.springframework.cloud.netflix.eureka.EurekaClientConfigBean.EurekaClientConfigBean
 #this.serviceUrl.put("defaultZone", "http://localhost:8761/eureka/");
-#根据源码得知，我们其实可以不设置。根据源码得知，defaultZone是map的key，为什么map？为了支持多个。
+#根据源码得知，我们其实可以不设置。defaultZone是map的key，为什么map？为了支持多个。
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-#如果你想了解EurekaClient的详细功能，那么通过配置文件入手，是个不错的选择
+#如果你想了解EurekaClient的详细功能，那么通过配置项入手，是个不错的选择
 #对应的类是：org.springframework.cloud.netflix.eureka.EurekaClientConfigBean
