--- a/cloud-layer-server/zuul-gateway/src/main/resources/bootstrap.properties
+++ b/cloud-layer-server/zuul-gateway/src/main/resources/bootstrap.properties
@@ -1,6 +1,33 @@
 spring.application.name=zuul-server
 server.port=8080
-
+my.test=test111
+#zuul支持两种路由模式：单实例、多实例。通过serviceid的形式，使用这种，必须将zuul注册到注册中心，具备负载均衡能力。
+#还有一种就是url的形式，这种形式比较容易理解。
+#如果同一个路径配置了多个路由serviceId，那么只会有最后一个生效，因为会被覆盖。
 zuul.routes.client-a.path=/client/**
+#单实例
 zuul.routes.client-a.url=http://127.0.0.1:8761
+#忽略的接口，通过路径匹配
+#zuul.ignored-patterns=
+#忽略的服务，通过服务名称匹配，整个服务将被屏蔽
+#zuul.ignored-services=
+#内部服务使用和敏感信息，将会被屏蔽
+#zuul.ignored-headers=
+
+#多实例模式
 #zuul.routes.client-c.service-id=
+
+
+#转发
+zuul.routes.client-test.path=/test/**
+zuul.routes..client-test.url=forward:/test
+
+#默认zuul会使用eureka提供的基本负载均衡功能，如果需要使用ribbon，需要禁止ribbon使用eureka
+
+#启动的时候就加载，不然会出现第一次失败的情况
+zuul.ribbon.eager-load.enabled=true
+
+#源码位置：org.springframework.cloud.netflix.ribbon.eureka.ConditionalOnRibbonAndEurekaEnabled
+ribbon.eureka.enabled=false
+
+logging.level.root=debug
