--- a/cloud-layer-server/zuul-gateway/pom.xml
+++ b/cloud-layer-server/zuul-gateway/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>web-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
 
