--- a/cloud-layer-server/zuul-gateway/src/main/resources/bootstrap.properties
+++ b/cloud-layer-server/zuul-gateway/src/main/resources/bootstrap.properties
@@ -31,3 +31,18 @@ zuul.ribbon.eager-load.enabled=true
 ribbon.eureka.enabled=false
 
 logging.level.root=debug
+
+
+#禁用Filter,规则zuul.{FilterClassName}.{filterType}.disable=true
+zuul.SendErrorFilter.error.disable=true
+
+#JWT Token颁发地址
+security.oauth2.client.access-token-uri=http://127.0.0.1:${server.port}/oauth/token/
+#验证授权
+security.oauth2.client.user-authorization-uri=http://127.0.0.1:${server.port}/oauth/authorize/
+#客户端ID
+security.oauth2.client.client-id=zuul-server
+
+security.oauth2.client.client-secret=secret
+#HS256加密
+security.oauth2.resource.jwt.key-value=test123
