--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,8 @@
 
     <repositories>
         <repository>
-            <id>repository-public</id>
-            <url>https://maven.aliyun.com/repository/public</url>
+            <id>mvn-repository</id>
+            <url>http://repo1.maven.org/maven2</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -80,8 +80,8 @@
 
     <pluginRepositories>
         <pluginRepository>
-            <id>pluginRepository-public</id>
-            <url>https://maven.aliyun.com/repository/public</url>
+            <id>mvn-repository</id>
+            <url>http://repo1.maven.org/maven2</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
