--- a/cloud-layer-server/zipkin-server/pom.xml
+++ b/cloud-layer-server/zipkin-server/pom.xml
@@ -2,28 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
-        <artifactId>base-spring-boot-starters</artifactId>
+        <artifactId>cloud-layer-server</artifactId>
         <groupId>io.cloud.layer</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>web-spring-boot-starter</artifactId>
-    <description>web 基础依赖,统一容器，统一版本</description>
+    <packaging>jar</packaging>
+    <artifactId>zipkin-server</artifactId>
+    <description>zipkin服务器</description>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>io.cloud.layer</groupId>
+            <artifactId>web-spring-boot-starter</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-undertow</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
