--- a/cloud-layer-starters/core-spring-boot-starters/pom.xml
+++ b/cloud-layer-starters/core-spring-boot-starters/pom.xml
@@ -20,6 +20,7 @@
         <module>logger-spring-boot-starter</module>
         <module>cache-spring-boot-starter</module>
         <module>ci-spring-boot-starters</module>
+        <module>tail-spring-boot-starter</module>
     </modules>
 
 
