--- a/cloud-layer-starters/config-spring-boot-starters/pom.xml
+++ b/cloud-layer-starters/config-spring-boot-starters/pom.xml
@@ -21,6 +21,7 @@
         <module>security-spring-boot-starter</module>
         <module>auth-spring-boot-starters</module>
         <module>websocket-spring-boot-starter</module>
+        <module>zipkin-server-spring-cloud-starter</module>
     </modules>
 
 
