--- a/cloud-layer-helper/cloud-layer-code-generate/pom.xml
+++ b/cloud-layer-helper/cloud-layer-code-generate/pom.xml
@@ -36,9 +36,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper</artifactId>
-            <version>3.5.3</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
 
