--- a/cloud-layer-helper/cloud-layer-code-generate/src/main/resources/sql-mysql.properties
+++ b/cloud-layer-helper/cloud-layer-code-generate/src/main/resources/sql-mysql.properties
@@ -1,1 +1,1 @@
-getTableInfosByKeyWord=select TABLE_NAME as "tableName",TABLE_COMMENT as "tableComment" from TABLES where TABLE_SCHEMA = '$database' AND TABLE_NAME like '%$tableName%';
+getTableInfosByKeyWord=select TABLE_SCHEMA as "databaseName" , TABLE_NAME as "tableName",TABLE_COMMENT as "tableComment" from TABLES where TABLE_SCHEMA = '$database' AND TABLE_NAME like '%$tableName%';
