--- a/cloud-layer-core/cloud-layer-utils/pom.xml
+++ b/cloud-layer-core/cloud-layer-utils/pom.xml
@@ -22,6 +22,10 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
