--- a/cloud-layer-starters/config-spring-boot-starters/swagger-spring-boot-starter/pom.xml
+++ b/cloud-layer-starters/config-spring-boot-starters/swagger-spring-boot-starter/pom.xml
@@ -40,6 +40,15 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.cloud.layer</groupId>
+            <artifactId>cloud-layer-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
