类生成器基本完成-扩展性很差

--- a/cloud-layer-helper/cloud-layer-code-generate/pom.xml
+++ b/cloud-layer-helper/cloud-layer-code-generate/pom.xml
@@ -43,6 +43,15 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.6</version>
+        </dependency>
     </dependencies>
 
 </project>
