--- a/cloud-layer-helper/cloud-layer-code-generate/src/main/resources/sql-mysql.properties
+++ b/cloud-layer-helper/cloud-layer-code-generate/src/main/resources/sql-mysql.properties
@@ -1,2 +1,3 @@
+#sql语句，如果需要使用其他类型的数据库，可以修改这里实现
 getTableInfosByKeyWord=select TABLE_SCHEMA as "databaseName" , TABLE_NAME as "tableName",TABLE_COMMENT as "tableComment" from TABLES where TABLE_SCHEMA = '$database' AND TABLE_NAME like '%$tableName%';
 getBeanBydatabaseNameAndTableName=select TABLE_SCHEMA as "databaseName",TABLE_NAME as "tableName",COLUMN_NAME as "columnName",IS_NULLABLE as "isNullAble",DATA_TYPE as "jdbcType",CHARACTER_MAXIMUM_LENGTH as "length",if(COLUMN_KEY = '' ,0,1) as "isKey",EXTRA as "idStrategy",COLUMN_COMMENT as "comment" from COLUMNS where TABLE_SCHEMA = '$databaseName' and TABLE_NAME = '$tableName' order by ORDINAL_POSITION ASC ;
